--- a/Illustration Notebook.ipynb
+++ b/Illustration Notebook.ipynb
@@ -15,17 +15,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\paula\\OneDrive\\Documents\\Experimental projects\\Reverse Black Scholes Neural Network GPU Learning\\NeuralNetworkPrediction.py:136: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  model.load_state_dict(torch.load(\"trained_model_dynamic.pth\"))\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -48,6 +40,11 @@
    ],
    "source": [
     "import NeuralNetworkPrediction\n",
+    "import warnings\n",
+    "\n",
+    "# Suppress all warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
     "\n",
     "NeuralNetworkPrediction.main()"
    ]
@@ -65,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -75,14 +72,6 @@
       "Using device: cuda\n",
       "MSE for log(F/K): 0.000000\n",
       "MSE for sigma: 0.000001\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\paula\\OneDrive\\Documents\\Experimental projects\\Reverse Black Scholes Neural Network GPU Learning\\AlternativeValidation.py:69: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  model.load_state_dict(torch.load(\"trained_model_dynamic.pth\"))\n"
      ]
     },
     {
